@@ -1,0 +1,4 @@
+from test.test_tools import load_tests
+import unittest
+
+unittest.main()
